2009-07-12  Mark Ellis  <mark@mpellis.org.uk>

	* implement streaming CeRapiInvoke for rapi2
	* move non RAPI API functions that are identical for all
	  WM versions out of the indirection mechanism, ie. 
	  CeCopyFileA, CeRapiInvokeA, and the IRAPIStream functions

2009-07-10  Mark Ellis  <mark@mpellis.org.uk>

	* implement CeRapiInvoke for rapi2 using buffers, based on
	  patch from David Richardson, many thanks !

2009-06-25  Mark Ellis  <mark@mpellis.org.uk>

	* fixes to CeRapiInvoke tests

2009-06-08  Mark Ellis  <mark@mpellis.org.uk>

	* create bootstrap script that doesn't run configure,
	  autogen.sh call bootstrap then configure
	* add configure options for odccm and synce-hal support,
	  and required dbus build structure
	* move rapi socket connection for odccm and hal from
	  libsynce to rapi_context, add rapi_context_disconnect()

2009-04-20  Mark Ellis  <mark@mpellis.org.uk>

	* catch uninitialized RapiContext in function calls
	* tidy up headers and shared constants, remove unused
	  rapi_types.h
	* implement reference counting on RapiContext

2009-04-11  Mark Ellis  <mark@mpellis.org.uk>

	* if RapiContext is auto-generated, keep it's SynceInfo
	  for later reference

2009-04-09  Mark Ellis  <mark@mpellis.org.uk>

	* use synce_info_get_ functions to obtain SynceInfo parameters;
	  new rapi_connection_get_ functions to give access to SynceInfo
	* allow access to rapi conn through python object

2009-03-27  Mark Ellis  <mark@mpellis.org.uk>

	* enhance pyrapi2 registry query_value, some small fixes
	* move file operations into a pythonic file-type class, and
	  move some file op flags into constants.pxi as enums
	* declare all non-python functions as nogil
	* add pydocs

2009-03-26  Mark Ellis  <mark@mpellis.org.uk>

	* adjust RapiSession to allow for multiple devices,
	  accept device name for constructor

2009-03-23  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in - require pyrex >= 0.9.6 for gil releasing
