@@ -4,6 +4,9 @@
 	* move non RAPI API functions that are identical for all
 	  WM versions out of the indirection mechanism, ie. 
 	  CeCopyFileA, CeRapiInvokeA, and the IRAPIStream functions
+	* deprecate CeFileCopyA() and CeRapiInvokeA() in favour of
+	  rapi_copy() and rapi_invoke(), to avoid confusion with
+	  "real" RAPI API
 
 2009-07-10  Mark Ellis  <mark@mpellis.org.uk>
 
